update installation docs

--- a/docs/docs/installation.mdx
+++ b/docs/docs/installation.mdx
@@ -20,7 +20,7 @@ import TabItem from '@theme/TabItem';
 <TabItem value="shell">
 
 ```bash
-curl --proto '=https' --tlsv1.2 -sSf https://lets-cli.org/install.sh | sh -- -b ~/bin
+curl --proto '=https' --tlsv1.2 -sSf https://lets-cli.org/install.sh | sh -s -- -b ~/bin
 ```
 
 This will install **latest** `lets` binary to `~/bin` directory.
