update homebrew docs

--- a/docs/docs/installation.mdx
+++ b/docs/docs/installation.mdx
@@ -102,7 +102,13 @@ TODO
 </TabItem>
 <TabItem value="homebrew">
 
-TODO
+```bash
+brew tap lets-cli/tap
+```
+
+```bash
+brew install lets-cli/tap/lets
+```
 
 </TabItem>
 </Tabs>
